fixed broken convert to vv function after changes made to asynch calls